--- a/ansible/hadoop/roles/yarn/tasks/main.yml
+++ b/ansible/hadoop/roles/yarn/tasks/main.yml
@@ -14,6 +14,7 @@
       ## TODO: common ?
     - spark-core
     - java-1.8.0-openjdk
+    - spark-python
     state: latest
 
 - name: Start yarn resourcemanager
